Added UI to the project

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -24,6 +24,14 @@
   overflow-y: auto;
 }
 
+// Makes the modal larger
+// .journal-view-content {
+//   .modal-wrapper {
+//     width: 800px;
+//     left: calc(50% - (800px/2));
+//   }
+// }
+
 .app-background-colour {
   background-color: rgb(235, 235, 240);
 }
